# TR3_USB_CPP

./: CMakeLists.txt  CMakePresets.json  README.md  build_msvc.bat
include/: serial_port.hpp  tr3_protocol.hpp
src/: main.cpp  serial_port.cpp  tr3_protocol.cpp
